syntax = "proto3";

//option java_multiple_files = true;
//option java_package = "com.stackr.proto.curd";
//option java_outer_classname = "CurdProto";

option go_package = "com.stackr.go/curd";
package curd;

service CurdService {
  rpc CreateCurd(CreateCurdReq) returns (CreateCurdRes);
  rpc ReadCurd(ReadCurdReq) returns (ReadCurdRes);
  rpc UpdateCurd(UpdateCurdReq) returns (UpdateCurdRes);
  rpc DeleteCurd(DeleteCurdReq) returns (DeleteCurdRes);
  rpc ListCurds(ListCurdsReq) returns (stream ListCurdsRes);
}

message Curd {
  string id = 1;
}

message CreateCurdReq {
  Curd curd = 1;
}

message CreateCurdRes {
  Curd curd = 1;
}

message UpdateCurdReq {
  Curd curd = 1; 
}

message UpdateCurdRes {
  Curd curd = 1;
}

message ReadCurdReq {
  string id = 1;
}

message ReadCurdRes {
  Curd curd = 1;
}

message DeleteCurdReq {
  string id = 1;
}

message DeleteCurdRes {
  bool success = 1;
}

message ListCurdsReq {
  
}

message ListCurdsRes {
    Curd curd = 1;
}